--- a/Site.Master
+++ b/Site.Master
@@ -15,6 +15,7 @@
 
     <webopt:bundlereference runat="server" path="~/Content/css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
 </head>
 <body>
@@ -47,22 +48,26 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <% if (Session["UsuarioLogado"] != null) { %>
+                    <% if (HttpContext.Current.User.Identity.IsAuthenticated) { %>
                         <a class="navbar-brand" runat="server" href="~/">Nome do aplicativo</a>
                     <% } %>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <% if (Session["UsuarioLogado"] != null) { %>
+                        <% if (HttpContext.Current.User.Identity.IsAuthenticated) { %>
                             <li><a runat="server" href="~/">Página inicial</a></li>
                             <li><a runat="server" href="~/NovaPaginaCadastro">Página de cadastro</a></li>
                         <% } %>
                     </ul>
-                    <ul class="nav navbar-nav navbar-right">
-                        <% if (Session["UsuarioLogado"] != null) { %>
-                            <li>
-                                <asp:Button ID="btnLogout" runat="server" Text="Sair" OnClick="btnLogout_Click" CssClass="btn btn-link" />
-                            </li>
+                    <ul class="nav navbar-nav navbar-right" style="height: 50px; display: flex;">
+                        <% if (HttpContext.Current.User.Identity.IsAuthenticated) { %>  
+                        
+                        <li style="display: flex; align-items: center; gap: 10px;">
+                            <a href="#" id="btnLogout" runat="server" onserverclick="btnLogout_Click" style="text-decoration: none;">
+                                <i class="bi bi-power" style="font-size: 17px;; color: cornflowerblue; cursor: pointer;"></i>
+                                Sair
+                            </a>
+                        </li>
                         <% } %>
                     </ul>
                 </div>
